fixed author quote in the third section with align-self

--- a/styles.css
+++ b/styles.css
@@ -129,8 +129,6 @@ ul {
     background-color: #e5e7eb;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 3rem 15%;
 }
 
@@ -138,6 +136,10 @@ ul {
     font-size: 2.25rem;
     font-style: italic;
     color: #1f2937;
+}
+
+.a-box {
+    align-self: flex-end;
 }
 
 .author {
